test-app_scen2/kube-objects/testscen2-services.yaml
# Use this for non-Istio testing to make services directly accessible
apiVersion: v1
kind: Service
metadata:
  name: test-scen2-app1-svc
spec:
  selector:
    app: test-scen2-app
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: test-scen2-app3-svc
spec:
  selector:
    app: test-scen2-app
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 5000
